Resolve ig video flicker on load.

--- a/app/styles/infinigram.css
+++ b/app/styles/infinigram.css
@@ -60,6 +60,7 @@
 .ig-picture,
 .ig-video {
     width: 100%;
+    opacity: 0;
 
     @media (--fablet)  {
         width: 50vw;
